--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,21 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  serviceProjectName: 'Hades.Server'
+
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  displayName: Restore
+  inputs:
+    command: 'restore'
+    projects: '**/$(serviceProjectName).csproj'
+    feedsToUse: 'config'
+    nugetConfigPath: 'NuGet.config'
+- task: DotNetCoreCLI@2
+  displayName: Build
+  inputs:
+    command: 'build'
+    projects: '**/$(serviceProjectName).csproj'
+    arguments: '--configuration $(buildConfiguration) --no-restore'
+    workingDirectory: 'build/$(serviceProjectName)'
