--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ variables:
 
 steps:
 - task: UseDotNet@2
+  displayName: 'Install .NET Core 3.0 SDK'
   inputs:
     packageType: 'sdk'
     version: '3.0.x'
