--- a/NuGet.config
+++ b/NuGet.config
@@ -3,6 +3,6 @@
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
         <add key="MyGet PoC.NOT" value="https://www.myget.org/F/poc-dot-not/api/v3/index.json" />
-        <add key="Azure DevOps PoC.NOT" value="https://pkgs.dev.azure.com/anastasoff/_packaging/clients/nuget/v3/index.json" />
+        <add key="Azure DevOps PoC.NOT Clients" value="https://pkgs.dev.azure.com/anastasoff/_packaging/poc-dot-not-clients/nuget/v3/index.json" />
     </packageSources>
 </configuration>
