--- a/src/Hades.Client/Hades.Client.csproj
+++ b/src/Hades.Client/Hades.Client.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <!--<PropertyGroup>
     <PackageId>PoC.NOT.Hades.Client</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>PoC.NOT - Hades.Client project</Description>
@@ -17,7 +17,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/poc-dot-not/hades</PackageProjectUrl>
     <RepositoryUrl>https://github.com/poc-dot-not/hades</RepositoryUrl>
-  </PropertyGroup>
+  </PropertyGroup>-->
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.10.0" />
