--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,10 @@ steps:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '-c $(buildConfiguration) --no-restore'
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'echo $(Build.BuildNumber)'
 - task: DotNetCoreCLI@2
   displayName: 'Pack Client'
   inputs:
