--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ pool:
 variables:
   Version.MajorMinor: 1.0
   Version.Revision: $[counter(variables['Version.MajorMinor'], 0)]
+  Version.BuildNumber: $(Version.MajorMinor).$(Version.Revision)
   buildConfiguration: 'Release'
   projectName: 'Hades'
 
@@ -37,7 +38,7 @@ steps:
 - task: Bash@3
   inputs:
     targetType: 'inline'
-    script: 'echo Version.MajorMinor - $(Version.MajorMinor) , Version.Revision - $(Version.Revision)'
+    script: 'echo Version.MajorMinor - $(Version.MajorMinor) , Version.Revision - $(Version.Revision) , Version.BuildNumber - $(Version.BuildNumber)'
 - task: DotNetCoreCLI@2
   displayName: 'Pack Client'
   inputs:
